# Snake

./: CMakeLists.txt  MyNcurses.cpp  MyNcurses.rc  MyNcurses.sln  MyNcurses.vcxproj  MyNcurses.vcxproj.filters  README.md  pdcurses.lib  resource.h
